--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "series",
-  "version": "0.3.0",
+  "version": "0.3.2",
   "description": "Compose a series of chainable async methods",
   "main": "index.js",
   "scripts": {
@@ -18,7 +18,8 @@
   "devDependencies": {
     "expect.js": "~0.2.0",
     "mocha": "~1.14.0",
-    "async": "~0.2.9"
+    "async": "~0.2.9",
+    "sinon": "~1.7.3"
   },
   "dependencies": {
     "promise": "~3.2.0",
